Actual windows handling; preventing scrolling on touch move events on mobile

--- a/designer/designer.css
+++ b/designer/designer.css
@@ -21,8 +21,9 @@ body {
     top: 7px;
     right: 7px;
     bottom: 7px;
-    width: 420px;
+    width: 406px;
     background: white;
     border: solid 1px #963;
+    padding: 7px
 }
 
